Add a minimal sample as an integration test
Since some of the dependencies in the main server module are optional
it makes sense to have a test that user can build a server without
them. This change adds such a module, so tests will verify that the
dependencies are indeed optional.

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <module>interop</module>
     <module>zipkin-spanstores</module>
     <module>zipkin-server</module>
+    <module>zipkin-server-minimal</module>
   </modules>
 
   <properties>
