Refactor integration test project to to src/it

--- a/zipkin-server/src/it/zipkin-server-minimal/pom.xml
+++ b/zipkin-server/src/it/zipkin-server-minimal/pom.xml
@@ -27,7 +27,6 @@
   <name>zipkin-server-minimal</name>
 
   <properties>
-    <main.basedir>${project.basedir}/..</main.basedir>
     <start-class>zipkin.minimal.ZipkinServer</start-class>
   </properties>
 
@@ -58,6 +57,13 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
